Mon Dec 09 04:48:39 GMT 2002  Olly Betts <olly@survex.com>

	* backends/quartz/: Minor code fettle.

Mon Dec 09 03:32:11 GMT 2002  Olly Betts <olly@survex.com>

	* backends/quartz/quartz_postlist.cc: Gratuitous layout fettling.

Mon Dec 09 03:30:27 GMT 2002  Olly Betts <olly@survex.com>

	* docs/quartzdesign.html: Improved wording and punctuation in 3
	  places.

Mon Dec 09 03:25:09 GMT 2002  Olly Betts <olly@survex.com>

	* common/,docs/todo.xml,include/om/omenquire.h,matcher/,
	  net/socketclient.cc,net/socketserver.cc,netprogs/omprogsrv.cc,
	  netprogs/omtcpsrv.cc: Fixed the remote backend to handle non-default
	  weighting schemes.  You can now even implement your own weighting
	  scheme and use it with the remote backend provided you register it
	  with SocketServer at runtime.

Sat Dec 07 21:18:39 GMT 2002  Olly Betts <olly@survex.com>

	* PLATFORMS: Updated.

Sat Dec 07 21:09:52 GMT 2002  Olly Betts <olly@survex.com>

	* NEWS,PLATFORMS,configure.in: Version 0.6.2.

Sat Dec 07 20:24:46 GMT 2002  Olly Betts <olly@survex.com>

	* NEWS: Updated.

Sat Dec 07 20:21:41 GMT 2002  Olly Betts <olly@survex.com>

	* docs/quickstart.html: Fixed parameters passed to OmQuartz__open().

Sat Dec 07 20:17:42 GMT 2002  Olly Betts <olly@survex.com>

	* backends/quartz/quartztest.cc: Fixed parameters passed to
	  OmQuartz__open().

Sat Dec 07 16:41:25 GMT 2002  Olly Betts <olly@survex.com>

	* docs/tests.html,testsuite/testsuite.cc: The testsuite won't install
	  its signal handler if XAPIAN_SIG_DFL is set.

Sat Dec 07 16:39:01 GMT 2002  Olly Betts <olly@survex.com>

	* HACKING: OM_DEBUG_XXX -> XAPIAN_DEBUG_YYY.

Sat Dec 07 04:48:37 GMT 2002  Olly Betts <olly@survex.com>

	* backends/quartz/btree.cc: max_item_size wasn't being set due to
	  some over-zealous code pruning.  It was defaulting to 0, and
	  was causing the code to write off the end of allocated memory
	  blocks.

Sat Dec 07 03:22:05 GMT 2002  Olly Betts <olly@survex.com>
